updated with tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".HabitListActivity" />
         <activity android:name=".CompletedHabitsActivity" />
-        <activity android:name=".AddHabitActivity"></activity>
+        <!-- <activity android:name=".AddHabitActivity"></activity> -->
+        <activity android:name=".EditHabitsActivity"></activity>
     </application>
 
 </manifest>
